2004-12-02  Chris Dunlap  <cdunlap@llnl.gov>

	* README: Updated notes regarding creation of secret key.

	* src/etc/munge.init: Revamped for SuSE and maybe LSB.

	* configure.ac, config/x_ac_check_ssl.m4:
	  Moved X_AC_CHECK_SSL before AC_PROG_LIBTOOL to allow the
	  linker's libpath to be computed correctly under AIX.

2004-12-01  Chris Dunlap  <cdunlap@llnl.gov>

	* README: Updated info regarding /etc/sysconfig/munge.
	* munge.spec, src/etc/Makefile.am, src/etc/munge.sysconfig:
	  Added /etc/sysconfig/munge.

	* src/libmunge/enum.c(_munge_enum_lookup): Changed return type from
	const munge_enum_table_t to munge_enum_table_t.

2004-11-30  Chris Dunlap  <cdunlap@llnl.gov>

	* config/Make-rpm.mk: Updated to reflect prior changes to META.

	* src/munged/munged.8.in: Updated info for '--force' cmdline opt.

2004-11-29  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c: Added <sys/socket.h> for AF_INET.

	* config/x_ac_check_cond_lib.m4, config/x_ac_check_fifo_recvfd.m4,
	  config/x_ac_check_peercred.m4, config/x_ac_check_pthreads.m4,
	  config/x_ac_debug.m4: Tweaked docs to be consistent with others.

	* configure.ac, config/x_ac_check_ssl.m4: Added X_AC_CHECK_SSL.

2004-11-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge_ctx.3.in, src/munge/munge.1.in,
	  src/munge/unmunge.1.in: Updated verbage.

	* src/munge/unmunge.c:
	  Changed MUNGE_KEY_ORIGIN to MUNGE_KEY_ENCODE_HOST.
	  Tweaked munge_keys[] strings.

	* configure.ac, config/x_ac_aix.m4:
	  Added X_AC_AIX to enable run-time linking under AIX.

2004-11-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/Makefile.am, src/libcommon/m_msg.c,
	  src/libcommon/m_msg.h, src/libcommon/msg.c, src/libcommon/msg.h,
	  src/libmunge/Makefile.am, src/libmunge/m_msg_client.c,
	  src/libmunge/m_msg_client.h, src/libmunge/msg_client.c,
	  src/libmunge/msg_client.h:
	  Renamed src/libcommon/msg.[ch] to m_msg.[ch].
	  Renamed src/libmunge/msg_client.[ch] to m_msg_client.[ch].