@@ -1,4 +1,4 @@
-.\" $Id: munge.7.in,v 1.3 2004/11/18 19:55:44 dun Exp $
+.\" $Id: munge.7.in,v 1.4 2004/12/07 19:24:40 dun Exp $
 
 .TH MUNGE 7 "@DATE@" "@PACKAGE@-@VERSION@" "Munge Uid 'N' Gid Emporium"
 
@@ -13,8 +13,8 @@ create and validate these credentials without the use of root privileges,
 reserved ports, or platform-specific methods.
 .PP
 A credential is created and validated by the local \fBmunged\fR daemon
-running on each node within a security realm.  A security realm is
-defined by the secret key; \fBmunged\fR daemons running on different nodes
+running on each host within a security realm.  A security realm is
+defined by the secret key; \fBmunged\fR daemons running on different hosts
 are in the same realm if they share the same key.  A client creates or
 validates a given credential through the use of the \fBlibmunge\fR library or
 \fBmunge\fR/\fBunmunge\fR executables; these are responsible for communicating
