@@ -1,4 +1,4 @@
-.\" $Id: munged.8.in,v 1.4 2004/11/30 20:18:19 dun Exp $
+.\" $Id: munged.8.in,v 1.5 2004/12/07 19:24:40 dun Exp $
 
 .TH MUNGED 8 "@DATE@" "@PACKAGE@-@VERSION@" "Munge Uid 'N' Gid Emporium"
 
@@ -77,8 +77,8 @@ All clocks within a security realm must be kept in sync within the credential
 time-to-live setting.
 .PP
 While \fBmunged\fR prevents a given credential from being decoded on a
-particular node more than once, nothing prevents it from being decoded on
-another node within the security realm before it expires.
+particular host more than once, nothing prevents it from being decoded on
+another host within the security realm before it expires.
 
 .SH AUTHOR
 Chris Dunlap <cdunlap@llnl.gov>
