@@ -1,3 +1,8 @@
+2004-12-07  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* README, src/libcommon/munge.7.in, src/libmunge/munge.3.in,
+	  src/munged/munged.8.in: Tweaked verbage.
+
 2004-12-02  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* README: Updated notes regarding creation of secret key.
